<resources>
    <string name="app_name">VOCABr</string>
    <string name="learnt_score">Learnt Score: %d%%</string>
    <string name="back_button_content_description">back button</string>
    <string name="show_button_text">Show</string>
    <string name="incorrect_button_text">X</string>
    <string name="correct_button_text">✓</string>
    <string name="save_button_text">Save</string>
    <string name="quit_button_text">Quit</string>
    <string name="term_type_default_text">(phrase)</string>
    <string name="learnt_score_default_text">learnt score: 0%</string>
    <string name="term_text_default">je mange des pommes</string>
    <string name="count_text_default">0</string>
    <string name="quitting_text">quitting</string>
    <string name="logo_sub_text">by dan jones</string>
    <string name="learn_button_text">Learn</string>
    <string name="load_button_text">Load</string>
    <string name="export_button_text">Export</string>
    <string name="settings_title">Settings</string>
    <string name="settings_learn_title">Learn</string>
    <string name="settings_list_title">List</string>
    <string name="settings_export_title">Export</string>
    <string name="settings_learn_days_since_title">Days Since Weight</string>
    <string name="settings_learn_correct_title">Correct Weight</string>
    <string name="settings_learn_tested_title">Tested Weight</string>
    <string name="settings_export_rows_title">Number of Rows</string>
    <string name="settings_radio_all">All</string>
    <string name="settings_radio_topn">Top N</string>
    <string name="settings_return_button">Return &amp; Save</string>
    <string name="delete_button">Delete</string>
    <string name="topn_edit_text_hint">N</string>
    <string name="definition_text_default">I eat apples</string>
    <string name="settings_learn_delay_text">Term Repeat Delay</string>
    <string name="settings_learn_delay_hint">Delay</string>
    <string name="settings_list_list_number_title">List Numbers</string>
    <string name="settings_list_show_term_title">Show term first</string>
</resources>